--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SHUBAM - PORTFOLIO</title>
+  <title>PRINCE - PORTFOLIO</title>
   <style>
     * {
       margin: 0;
@@ -147,16 +147,16 @@
   <div class="container">
     <div class="card">
       <img src="file.png" alt="SHUBAM" class="profile-pic" />
-      <h1>SHUBAM</h1>
-      <p>Hi! I'm SHUBAM — a creative tech lover building bots, websites, and Telegram tools. I'm a owner of HACKING RELATED / @NGYT777GG channel</p>
+      <h1>PRINCE SAH</h1>
+      <p>Hi! I'm Prince Kumar Sah— a creative tech lover building bots, websites, and Hacking tools and tricks. I am the Owner of P mods Channel where new mods , hacking related courses and many more premium tricks are uploaded for free. </p>
 
       <div class="info-box">
         <h2>About Me</h2>
         <ul>
-          <li><strong>Country:</strong> India</li>
-          <li><strong>Age:</strong> 16</li>
+          <li><strong>Country:</strong> Nepal</li>
+          <li><strong>Age:</strong> 15</li>
           <li><strong>School:</strong> High School</li>
-          <li><strong>Hobbies:</strong> Coding, Gaming, Designing</li>
+          <li><strong>Hobbies:</strong> Coding, Gaming, Designing, Hacking</li>
         </ul>
       </div>
 
@@ -165,20 +165,17 @@
         <ul>
           <li>PHP & Python Bots</li>
           <li>HTML, CSS, JS</li>
-          <li>Telegram Bot Development</li>
+          <li>ETHICAL HACKING </li>
           <li>Web UI/UX Design</li>
           <li>Automation Systems</li>
         </ul>
       </div>
 
-      <a href="https://t.me/NGYT777GG" class="telegram-btn" target="_blank">Join My Telegram</a>
+      <a href="https://t.me/pmods0" class="telegram-btn" target="_blank">Join My Telegram</a>
     </div>
 
-    <footer>© 2025 SHUBAM. All rights reserved.</footer>
+    <footer>© 2025 PRINCE. All rights reserved.</footer>
   </div>
 
 </body>
 </html>
-
-
-* MADE BY @NGYT777GG OUR TELEGRAM CHANNEL
